# Sokoban

./: Cargo.toml  README.md
benches/: solver_benchmark.rs
levels/: cognitive_3.txt  cognitive_4.txt  err_1.txt
levels/cognitive/: 1.txt  2.txt
levels/legacy/: 1.txt  13.txt  14.txt  2.txt  6.txt  7.txt  8.txt  9.txt
src/: main.rs  screen.rs
src/game/: board.rs  board_command.rs  board_event.rs  cell.rs  entity.rs  game.rs  game_command.rs  game_event.rs  grid.rs  mod.rs  solver.rs
src/screen/: computing_solution_screen.rs  exit_screen.rs  game_screen.rs  level_selector_screen.rs  menu_screen.rs  mod.rs  screen.rs  solver_screen.rs
src/screens/: computing_solution_screen.rs  exit_screen.rs  game_screen.rs  level_selector_screen.rs  menu_screen.rs  mod.rs  screen.rs  solver_screen.rs
src/utils/: mod.rs  print_by_queue.rs
