[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
crossterm = "0.27.0"
glob = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "solver_benchmark"
harness = false

[features]
freeze_deadlock_check = []
